--- a/controllers/questions/_list_toolbar.htm
+++ b/controllers/questions/_list_toolbar.htm
@@ -15,4 +15,5 @@
         data-stripe-load-indicator>
         <?= e(trans('backend::lang.list.delete_selected')) ?>
     </button>
+    <a href="<?= Backend::url('samubra/exam/questions/import') ?>" class="btn btn-default oc-icon-upload">批量导入试题</a>
 </div>
