修复导入题库界面的提示文字

--- a/controllers/questions/import.htm
+++ b/controllers/questions/import.htm
@@ -2,7 +2,7 @@
 
 <div class="layout-row">
     <p class="flash-message static success">
-导入说明：1、判断题对应的题型为5，选择题对应的题型为1；2、判断题正确的答案为A，错误的答案为B；
+导入说明：1、判断题对应的题型为5，选择题对应的题型为1；2、判断题正确的答案为A，错误的答案为B；3:多选题为2；
 </p>
 	<?= $this->importRender() ?>
 </div>
